Implement user role management and enhance error handling; refactor API service imports and update JWT expiration